Product-backlog  - Adding ProductBacklog view

--- a/src/styles/__mixins.scss
+++ b/src/styles/__mixins.scss
@@ -8,3 +8,7 @@
 @mixin main-title-font {
   font-family: 'Norteworthy';
 }
+
+@mixin shadow-panel{
+  box-shadow: 10px 10px 20px -5px rgba(0,0,0,0.75);
+}
